subliminal (0.7.2-1) UNRELEASED; urgency=low

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Sun, 10 Nov 2013 17:20:51 +0100

subliminal (0.6.3-1) unstable; urgency=low

  * New upstream release
    + Depend on requests < 1.0

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Mon, 08 Apr 2013 20:17:28 +0200

subliminal (0.6.2-1) unstable; urgency=low

  * New upstream release
    + Tighten dependencies
  * Remove dh_clean override
  * Use debhelper compat level 9
  * Bump Standards-Version to 3.9.4, no changes needed

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Mon, 24 Dec 2012 20:04:30 +0100

subliminal (0.5.1-1) unstable; urgency=low

  * Initial release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Mon, 09 Apr 2012 17:58:18 +0200