@@ -1,1 +1,0 @@
-subliminal*.egg-info/SOURCES.txt
